--- a/1.html
+++ b/1.html
@@ -14,6 +14,6 @@
   <h2>HTML이란 무엇인가?</h2>
   <p>The <strong><u>first</u> langauge</strong> I learned.</p>
   <img src="web1.jpg" width="80%">
-  <p style="margin-top:20px;">개발자로 전직하고 싶은 문과 사무직원 1312341번으로서 맨 처음 <a href="https://html.spec.whatwg.org/multipage/" target="_blank" title="HTML specification">HTML</a>을 배웠다.</p>
+  <p style="margin-top:20px;">맨 처음 <a href="https://html.spec.whatwg.org/multipage/" target="_blank" title="HTML specification">HTML</a>을 배웠다.</p>
 </body>
 </html>
