--- a/2.html
+++ b/2.html
@@ -14,6 +14,6 @@
   <h2>CSS란 무엇인가?</h2>
   <p>The <strong><u>second</u> langauge</strong> I learned.</p>
   <img src="web2.jpg" width="80%">
-  <p style="margin-top:20px;">개발자로 전직하고 싶은 문과 사무직원 1312341번으로서 두 번째로 <a href="https://www.w3schools.com/css/css_intro.asp" target="_blank" title="CSS definition">CSS</a>를 배웠다.</p>
+  <p style="margin-top:20px;">두 번째로 <a href="https://www.w3schools.com/css/css_intro.asp" target="_blank" title="CSS definition">CSS</a>를 배웠다.</p>
 </body>
 </html>
