--- a/3.html
+++ b/3.html
@@ -14,6 +14,6 @@
   <h2>JavaScript란 무엇인가?</h2>
   <p>The <strong><u>third</u> langauge</strong> I learned.</p>
   <img src="web3.jpg" width="80%">
-  <p style="margin-top:20px;">개발자로 전직하고 싶은 문과 사무직원 1312341번으로서 세 번째로 <a href="https://www.w3resource.com/javascript/introduction/ECMA-and-javascript.php" target="_blank" title="JavaScript introdution">JavaScript</a>를 배웠다.</p>
+  <p style="margin-top:20px;">세 번째로 <a href="https://www.w3resource.com/javascript/introduction/ECMA-and-javascript.php" target="_blank" title="JavaScript introdution">JavaScript</a>를 배웠다.</p>
 </body>
 </html>
