--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <h2>WEB이란 무엇인가?</h2>
   <p>The <strong>very <u>beginning</u></strong> of this study.</p>
   <img src="web0.jpg" width="80%">
-  <p style="margin-top:20px;">제0번째의 <a href="https://en.wikipedia.org/wiki/World_Wide_Web" target="_blank" title="WEB definition">개념</a>.</p>
+  <p style="margin-top:20px;">제0번째 <a href="https://en.wikipedia.org/wiki/World_Wide_Web" target="_blank" title="WEB definition">개념</a>.</p>
 </body>
 </html>
